antlr-generated/com/pixelmaid/antlr3x/tutorial/orignParser.java
// $ANTLR 3.5 /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g 2013-02-01 14:43:50

  package com.pixelmaid.antlr3x.tutorial;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class orignParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "IDENT", "INTEGER", 
		"MULTILINE_COMMENT", "WS", "'!='", "'('", "')'", "'*'", "'+'", "','", 
		"'-'", "'.'", "'/'", "':'", "':='", "';'", "'<'", "'<='", "'='", "'>'", 
		"'>='", "'Integer'", "'and'", "'begin'", "'constant'", "'else'", "'elseif'", 
		"'end'", "'exit'", "'function'", "'if'", "'loop'", "'mod'", "'not'", "'or'", 
		"'program'", "'then'", "'var'", "'when'", "'while'"
	};
	public static final int EOF=-1;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int COMMENT=4;
	public static final int IDENT=5;
	public static final int INTEGER=6;
	public static final int MULTILINE_COMMENT=7;
	public static final int WS=8;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public orignParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public orignParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return orignParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g"; }


	public static class program_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "program"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:15:1: program : 'program' IDENT '=' ( constant | variable )* 'begin' ( statement )* 'end' IDENT '.' ;
	public final orignParser.program_return program() throws RecognitionException {
		orignParser.program_return retval = new orignParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal1=null;
		Token IDENT2=null;
		Token char_literal3=null;
		Token string_literal6=null;
		Token string_literal8=null;
		Token IDENT9=null;
		Token char_literal10=null;
		ParserRuleReturnScope constant4 =null;
		ParserRuleReturnScope variable5 =null;
		ParserRuleReturnScope statement7 =null;

		Object string_literal1_tree=null;
		Object IDENT2_tree=null;
		Object char_literal3_tree=null;
		Object string_literal6_tree=null;
		Object string_literal8_tree=null;
		Object IDENT9_tree=null;
		Object char_literal10_tree=null;

		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:16:2: ( 'program' IDENT '=' ( constant | variable )* 'begin' ( statement )* 'end' IDENT '.' )
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:16:3: 'program' IDENT '=' ( constant | variable )* 'begin' ( statement )* 'end' IDENT '.'
			{
			root_0 = (Object)adaptor.nil();


			string_literal1=(Token)match(input,40,FOLLOW_40_in_program46); 
			string_literal1_tree = (Object)adaptor.create(string_literal1);
			adaptor.addChild(root_0, string_literal1_tree);

			IDENT2=(Token)match(input,IDENT,FOLLOW_IDENT_in_program48); 
			IDENT2_tree = (Object)adaptor.create(IDENT2);
			adaptor.addChild(root_0, IDENT2_tree);

			char_literal3=(Token)match(input,23,FOLLOW_23_in_program50); 
			char_literal3_tree = (Object)adaptor.create(char_literal3);
			adaptor.addChild(root_0, char_literal3_tree);

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:17:2: ( constant | variable )*
			loop1:
			while (true) {
				int alt1=3;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==29) ) {
					alt1=1;
				}
				else if ( (LA1_0==42) ) {
					alt1=2;
				}

				switch (alt1) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:17:3: constant
					{
					pushFollow(FOLLOW_constant_in_program54);
					constant4=constant();
					state._fsp--;

					adaptor.addChild(root_0, constant4.getTree());

					}
					break;
				case 2 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:17:14: variable
					{
					pushFollow(FOLLOW_variable_in_program58);
					variable5=variable();
					state._fsp--;

					adaptor.addChild(root_0, variable5.getTree());

					}
					break;

				default :
					break loop1;
				}
			}

			string_literal6=(Token)match(input,28,FOLLOW_28_in_program65); 
			string_literal6_tree = (Object)adaptor.create(string_literal6);
			adaptor.addChild(root_0, string_literal6_tree);

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:20:2: ( statement )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==IDENT||(LA2_0 >= 35 && LA2_0 <= 36)||LA2_0==44) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:20:2: statement
					{
					pushFollow(FOLLOW_statement_in_program68);
					statement7=statement();
					state._fsp--;

					adaptor.addChild(root_0, statement7.getTree());

					}
					break;

				default :
					break loop2;
				}
			}

			string_literal8=(Token)match(input,32,FOLLOW_32_in_program72); 
			string_literal8_tree = (Object)adaptor.create(string_literal8);
			adaptor.addChild(root_0, string_literal8_tree);

			IDENT9=(Token)match(input,IDENT,FOLLOW_IDENT_in_program74); 
			IDENT9_tree = (Object)adaptor.create(IDENT9);
			adaptor.addChild(root_0, IDENT9_tree);

			char_literal10=(Token)match(input,16,FOLLOW_16_in_program76); 
			char_literal10_tree = (Object)adaptor.create(char_literal10);
			adaptor.addChild(root_0, char_literal10_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class constant_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "constant"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:24:1: constant : 'constant' IDENT ':' type ':=' expression ';' ;
	public final orignParser.constant_return constant() throws RecognitionException {
		orignParser.constant_return retval = new orignParser.constant_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal11=null;
		Token IDENT12=null;
		Token char_literal13=null;
		Token string_literal15=null;
		Token char_literal17=null;
		ParserRuleReturnScope type14 =null;
		ParserRuleReturnScope expression16 =null;

		Object string_literal11_tree=null;
		Object IDENT12_tree=null;
		Object char_literal13_tree=null;
		Object string_literal15_tree=null;
		Object char_literal17_tree=null;

		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:25:2: ( 'constant' IDENT ':' type ':=' expression ';' )
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:25:3: 'constant' IDENT ':' type ':=' expression ';'
			{
			root_0 = (Object)adaptor.nil();


			string_literal11=(Token)match(input,29,FOLLOW_29_in_constant86); 
			string_literal11_tree = (Object)adaptor.create(string_literal11);
			adaptor.addChild(root_0, string_literal11_tree);

			IDENT12=(Token)match(input,IDENT,FOLLOW_IDENT_in_constant88); 
			IDENT12_tree = (Object)adaptor.create(IDENT12);
			adaptor.addChild(root_0, IDENT12_tree);

			char_literal13=(Token)match(input,18,FOLLOW_18_in_constant90); 
			char_literal13_tree = (Object)adaptor.create(char_literal13);
			adaptor.addChild(root_0, char_literal13_tree);

			pushFollow(FOLLOW_type_in_constant92);
			type14=type();
			state._fsp--;

			adaptor.addChild(root_0, type14.getTree());

			string_literal15=(Token)match(input,19,FOLLOW_19_in_constant94); 
			string_literal15_tree = (Object)adaptor.create(string_literal15);
			adaptor.addChild(root_0, string_literal15_tree);

			pushFollow(FOLLOW_expression_in_constant96);
			expression16=expression();
			state._fsp--;

			adaptor.addChild(root_0, expression16.getTree());

			char_literal17=(Token)match(input,20,FOLLOW_20_in_constant98); 
			char_literal17_tree = (Object)adaptor.create(char_literal17);
			adaptor.addChild(root_0, char_literal17_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "constant"


	public static class variable_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "variable"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:28:1: variable : 'var' IDENT ( ',' IDENT )* ':' type ( ':=' expression )* ';' ;
	public final orignParser.variable_return variable() throws RecognitionException {
		orignParser.variable_return retval = new orignParser.variable_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal18=null;
		Token IDENT19=null;
		Token char_literal20=null;
		Token IDENT21=null;
		Token char_literal22=null;
		Token string_literal24=null;
		Token char_literal26=null;
		ParserRuleReturnScope type23 =null;
		ParserRuleReturnScope expression25 =null;

		Object string_literal18_tree=null;
		Object IDENT19_tree=null;
		Object char_literal20_tree=null;
		Object IDENT21_tree=null;
		Object char_literal22_tree=null;
		Object string_literal24_tree=null;
		Object char_literal26_tree=null;

		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:29:2: ( 'var' IDENT ( ',' IDENT )* ':' type ( ':=' expression )* ';' )
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:29:3: 'var' IDENT ( ',' IDENT )* ':' type ( ':=' expression )* ';'
			{
			root_0 = (Object)adaptor.nil();


			string_literal18=(Token)match(input,42,FOLLOW_42_in_variable109); 
			string_literal18_tree = (Object)adaptor.create(string_literal18);
			adaptor.addChild(root_0, string_literal18_tree);

			IDENT19=(Token)match(input,IDENT,FOLLOW_IDENT_in_variable111); 
			IDENT19_tree = (Object)adaptor.create(IDENT19);
			adaptor.addChild(root_0, IDENT19_tree);

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:29:15: ( ',' IDENT )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==14) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:29:16: ',' IDENT
					{
					char_literal20=(Token)match(input,14,FOLLOW_14_in_variable114); 
					char_literal20_tree = (Object)adaptor.create(char_literal20);
					adaptor.addChild(root_0, char_literal20_tree);

					IDENT21=(Token)match(input,IDENT,FOLLOW_IDENT_in_variable116); 
					IDENT21_tree = (Object)adaptor.create(IDENT21);
					adaptor.addChild(root_0, IDENT21_tree);

					}
					break;

				default :
					break loop3;
				}
			}

			char_literal22=(Token)match(input,18,FOLLOW_18_in_variable120); 
			char_literal22_tree = (Object)adaptor.create(char_literal22);
			adaptor.addChild(root_0, char_literal22_tree);

			pushFollow(FOLLOW_type_in_variable122);
			type23=type();
			state._fsp--;

			adaptor.addChild(root_0, type23.getTree());

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:29:37: ( ':=' expression )*
			loop4:
			while (true) {
				int alt4=2;
				int LA4_0 = input.LA(1);
				if ( (LA4_0==19) ) {
					alt4=1;
				}

				switch (alt4) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:29:38: ':=' expression
					{
					string_literal24=(Token)match(input,19,FOLLOW_19_in_variable125); 
					string_literal24_tree = (Object)adaptor.create(string_literal24);
					adaptor.addChild(root_0, string_literal24_tree);

					pushFollow(FOLLOW_expression_in_variable127);
					expression25=expression();
					state._fsp--;

					adaptor.addChild(root_0, expression25.getTree());

					}
					break;

				default :
					break loop4;
				}
			}

			char_literal26=(Token)match(input,20,FOLLOW_20_in_variable131); 
			char_literal26_tree = (Object)adaptor.create(char_literal26);
			adaptor.addChild(root_0, char_literal26_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "variable"


	public static class function_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "function"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:32:1: function : 'function' IDENT '(' ( parameters )? ')' '=' ( variable )* ( statement )* 'end' IDENT ;
	public final orignParser.function_return function() throws RecognitionException {
		orignParser.function_return retval = new orignParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal27=null;
		Token IDENT28=null;
		Token char_literal29=null;
		Token char_literal31=null;
		Token char_literal32=null;
		Token string_literal35=null;
		Token IDENT36=null;
		ParserRuleReturnScope parameters30 =null;
		ParserRuleReturnScope variable33 =null;
		ParserRuleReturnScope statement34 =null;

		Object string_literal27_tree=null;
		Object IDENT28_tree=null;
		Object char_literal29_tree=null;
		Object char_literal31_tree=null;
		Object char_literal32_tree=null;
		Object string_literal35_tree=null;
		Object IDENT36_tree=null;

		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:33:2: ( 'function' IDENT '(' ( parameters )? ')' '=' ( variable )* ( statement )* 'end' IDENT )
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:33:4: 'function' IDENT '(' ( parameters )? ')' '=' ( variable )* ( statement )* 'end' IDENT
			{
			root_0 = (Object)adaptor.nil();


			string_literal27=(Token)match(input,34,FOLLOW_34_in_function143); 
			string_literal27_tree = (Object)adaptor.create(string_literal27);
			adaptor.addChild(root_0, string_literal27_tree);

			IDENT28=(Token)match(input,IDENT,FOLLOW_IDENT_in_function145); 
			IDENT28_tree = (Object)adaptor.create(IDENT28);
			adaptor.addChild(root_0, IDENT28_tree);

			char_literal29=(Token)match(input,10,FOLLOW_10_in_function147); 
			char_literal29_tree = (Object)adaptor.create(char_literal29);
			adaptor.addChild(root_0, char_literal29_tree);

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:33:24: ( parameters )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==IDENT) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:33:24: parameters
					{
					pushFollow(FOLLOW_parameters_in_function148);
					parameters30=parameters();
					state._fsp--;

					adaptor.addChild(root_0, parameters30.getTree());

					}
					break;

			}

			char_literal31=(Token)match(input,11,FOLLOW_11_in_function151); 
			char_literal31_tree = (Object)adaptor.create(char_literal31);
			adaptor.addChild(root_0, char_literal31_tree);

			char_literal32=(Token)match(input,23,FOLLOW_23_in_function153); 
			char_literal32_tree = (Object)adaptor.create(char_literal32);
			adaptor.addChild(root_0, char_literal32_tree);

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:34:3: ( variable )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==42) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:34:4: variable
					{
					pushFollow(FOLLOW_variable_in_function158);
					variable33=variable();
					state._fsp--;

					adaptor.addChild(root_0, variable33.getTree());

					}
					break;

				default :
					break loop6;
				}
			}

			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:35:3: ( statement )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==IDENT||(LA7_0 >= 35 && LA7_0 <= 36)||LA7_0==44) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:35:3: statement
					{
					pushFollow(FOLLOW_statement_in_function165);
					statement34=statement();
					state._fsp--;

					adaptor.addChild(root_0, statement34.getTree());

					}
					break;

				default :
					break loop7;
				}
			}

			string_literal35=(Token)match(input,32,FOLLOW_32_in_function170); 
			string_literal35_tree = (Object)adaptor.create(string_literal35);
			adaptor.addChild(root_0, string_literal35_tree);

			IDENT36=(Token)match(input,IDENT,FOLLOW_IDENT_in_function172); 
			IDENT36_tree = (Object)adaptor.create(IDENT36);
			adaptor.addChild(root_0, IDENT36_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function"


	public static class type_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:39:1: type : 'Integer' ;
	public final orignParser.type_return type() throws RecognitionException {
		orignParser.type_return retval = new orignParser.type_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal37=null;

		Object string_literal37_tree=null;

		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:40:2: ( 'Integer' )
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:40:4: 'Integer'
			{
			root_0 = (Object)adaptor.nil();


			string_literal37=(Token)match(input,26,FOLLOW_26_in_type185); 
			string_literal37_tree = (Object)adaptor.create(string_literal37);
			adaptor.addChild(root_0, string_literal37_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type"


	public static class statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:44:1: statement : ( assignmentStatement | ifStatement | loopStatement | whileStatement );
	public final orignParser.statement_return statement() throws RecognitionException {
		orignParser.statement_return retval = new orignParser.statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope assignmentStatement38 =null;
		ParserRuleReturnScope ifStatement39 =null;
		ParserRuleReturnScope loopStatement40 =null;
		ParserRuleReturnScope whileStatement41 =null;


		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:45:2: ( assignmentStatement | ifStatement | loopStatement | whileStatement )
			int alt8=4;
			switch ( input.LA(1) ) {
			case IDENT:
				{
				alt8=1;
				}
				break;
			case 35:
				{
				alt8=2;
				}
				break;
			case 36:
				{
				alt8=3;
				}
				break;
			case 44:
				{
				alt8=4;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}
			switch (alt8) {
				case 1 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:45:4: assignmentStatement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_assignmentStatement_in_statement197);
					assignmentStatement38=assignmentStatement();
					state._fsp--;

					adaptor.addChild(root_0, assignmentStatement38.getTree());

					}
					break;
				case 2 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:46:4: ifStatement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_ifStatement_in_statement202);
					ifStatement39=ifStatement();
					state._fsp--;

					adaptor.addChild(root_0, ifStatement39.getTree());

					}
					break;
				case 3 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:47:4: loopStatement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_loopStatement_in_statement207);
					loopStatement40=loopStatement();
					state._fsp--;

					adaptor.addChild(root_0, loopStatement40.getTree());

					}
					break;
				case 4 :
					// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:48:4: whileStatement
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_whileStatement_in_statement212);
					whileStatement41=whileStatement();
					state._fsp--;

					adaptor.addChild(root_0, whileStatement41.getTree());

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class ifStatement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ifStatement"
	// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:52:1: ifStatement : 'if' expression 'then' ( statement )+ ( 'elseif' expression 'then' ( statement )+ )* ( 'else' ( statement )+ )? 'end' 'if' ';' ;
	public final orignParser.ifStatement_return ifStatement() throws RecognitionException {
		orignParser.ifStatement_return retval = new orignParser.ifStatement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal42=null;
		Token string_literal44=null;
		Token string_literal46=null;
		Token string_literal48=null;
		Token string_literal50=null;
		Token string_literal52=null;
		Token string_literal53=null;
		Token char_literal54=null;
		ParserRuleReturnScope expression43 =null;
		ParserRuleReturnScope statement45 =null;
		ParserRuleReturnScope expression47 =null;
		ParserRuleReturnScope statement49 =null;
		ParserRuleReturnScope statement51 =null;

		Object string_literal42_tree=null;
		Object string_literal44_tree=null;
		Object string_literal46_tree=null;
		Object string_literal48_tree=null;
		Object string_literal50_tree=null;
		Object string_literal52_tree=null;
		Object string_literal53_tree=null;
		Object char_literal54_tree=null;

		try {
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:53:2: ( 'if' expression 'then' ( statement )+ ( 'elseif' expression 'then' ( statement )+ )* ( 'else' ( statement )+ )? 'end' 'if' ';' )
			// /Users/jenniferjacobs/Documents/MIT/HighLow_Tech/thesis/code/workspace/DressCode_v0.5/src/com/pixelmaid/dresscode/antlr/orign.g:53:4: 'if' expression 'then' ( statement )+ ( 'elseif' expression 'then' ( statement )+ )* ( 'else' ( statement )+ )? 'end' 'if' ';'
			{
			root_0 = (Object)adaptor.nil();


			string_literal42=(Token)match(input,35,FOLLOW_35_in_ifStatement226); 
			string_literal42_tree = (Object)adaptor.create(string_literal42);
			adaptor.addChild(root_0, string_literal42_tree);
